# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: checksci.yml
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  gendiff.py  select_file.py
gendiff/difference_calculator/: gendiff.py  select_file.py
gendiff/formatter/: formatter.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: fixtures.py  test_gendiff.py  test_gendiff_json.py  test_gendiff_nested.py  test_gendiff_plain.py  test_gendiff_yml.py
